idea/testData/kotlinAndJavaChecker/javaAgainstKotlin/ExtendInterfaceWithDefaultMethodAndCompatibilityDisabled.java
package test;

<error descr="Class 'ExtendInterfaceWithDefaultMethodAndCompatibilityAll' must either be declared abstract or implement abstract method 'bar()' in 'KotlinInterface'">class ExtendInterfaceWithDefaultMethodAndCompatibilityAll implements KotlinInterface</error> {}